5개 포스트 시니어급 심화 (Spring Async/Resilience, Kafka Broker, DB Pool/Locks)
- spring-async: AsyncExecutionInterceptor, TaskDecorator MDC, Virtual Thread 핀닝 (514→1176줄)
- kafka-broker-deep: Purgatory TimingWheel, Controller StateMachine, advertised.listeners (517→1542줄)
- spring-resilience: Ring Buffer CAS, Jitter 수학, Decorator 순서 오류 시나리오 (400→1705줄)
- db-connection-pool: ConcurrentBag 3단계, FastList JIT, OSIV 커넥션 정량화 (577→1794줄)
- db-locks: Next-Key Lock 호환성, AUTO_INCREMENT 모드, Redisson AOP 분산락 (750→1856줄)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>